examples/test/testpolicy4016.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4016
  namespace: namespace84
spec:
  podSelector:
    matchLabels:
      key18: value29
      key39: value47
      key4: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value11
      podSelector:
        matchLabels:
          key13: value8
          key45: value22
